remove commons.lang3